Fix ScaleControl wrapping in case of parent break-word CSS (#6646) (#6647)
* Fix ScaleControl wrapping in case of parent break-word CSS (#6646)

Depending on a parent container styling (overflow-wrap: break-word;) the unit in the scale control could be wrapped in two lines (km -> k\nm).

Adding white-space: nowrap; to the scale styling ensures it's indepdendent from any parent container styling.

* docs: changelog entry

--- a/src/css/maplibre-gl.css
+++ b/src/css/maplibre-gl.css
@@ -602,6 +602,7 @@ a.maplibregl-ctrl-logo.maplibregl-compact {
 .maplibregl-ctrl-scale {
     background-color: rgb(255, 255, 255, 0.75);
     font-size: 10px;
+    white-space: nowrap;
     border-width: medium 2px 2px;
     border-style: none solid solid;
     border-color: #333;
@@ -609,7 +610,6 @@ a.maplibregl-ctrl-logo.maplibregl-compact {
     color: #333;
     box-sizing: border-box;
 }
-
 .maplibregl-popup {
     position: absolute;
     top: 0;
